# BIONIC-evals

./: .gitignore  README.md  activate.sh  pyproject.toml
bioniceval/: main.py  state.py
bioniceval.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bioniceval/config/: fig2a_config.json  fig3a_config.json  sample_config.json
bioniceval/datasets/: Union.txt  iCell.txt  test_features.tsv  test_net.txt
bioniceval/evals/: coannotation.py  function_prediction.py  module_detection.py
bioniceval/plotting/: plotting.py
bioniceval/standards/: test_function_standard.csv  test_module_standard.pickle  test_standard.txt  yeast-IntAct-complex-modules.json
bioniceval/utils/: config_processor.py  file_utils.py  process_config.py  resolvers.py
