[tool.poetry]
name = "bioniceval"
version = "0.1.0"
description = "A library for evaluating BIONIC features"
authors = ["duncster94 <duncan.forster@mail.utoronto.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.24.1"
pandas = "^1.2.2"
numpy = "^1.20.1"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
networkx = "^2.5"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"

[tool.poetry.scripts]
bioniceval = "bioniceval.main:main"

[tool.black]
line-length = 100

include = '\.pyi?$'

exclude = '''
(
      __pycache__
    | \btutorials\b
    | \bbuild\b
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[tool.flake8]
max-line-length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

